--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     android:padding="16sp">
 
-    <TextView
-        android:id="@+id/tv_movie_item_title"
+    <ImageView
+        android:id="@+id/tv_movie_item_poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </FrameLayout>
