--- a/app/src/main/res/layout/activity_browse_movies.xml
+++ b/app/src/main/res/layout/activity_browse_movies.xml
@@ -7,22 +7,22 @@
     tools:context="name.meszaros.gabor.popularmovies.BrowseMoviesActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movies"
+        android:id="@+id/recycler_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"/>
 
     <TextView
-        android:id="@+id/tv_error_display"
+        android:id="@+id/text_error_display"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="60dp"
         android:textAlignment="center"
-        android:text="@string/error_message_no_movies"
+        android:text="@string/error_no_movies"
         android:visibility="invisible"/>
 
     <ProgressBar
-        android:id="@+id/pb_load_movies"
+        android:id="@+id/progress_bar_load_movies"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_centerVertical="true"
