--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -13,12 +13,16 @@
     <TextView
         android:id="@+id/text_movie_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:textStyle="bold"
+        android:textSize="22sp"/>
 
     <TextView
         android:id="@+id/text_movie_original_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="14dp"
         android:layout_below="@id/text_movie_title" />
 
     <ImageView
@@ -26,6 +30,8 @@
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:layout_alignParentLeft="true"
+        android:paddingRight="8dp"
+        android:paddingBottom="8dp"
         android:layout_below="@id/text_movie_original_title" />
 
     <TextView
@@ -33,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_movie_original_title"
+        android:textStyle="bold"
         android:layout_toRightOf="@id/image_movie_poster" />
 
     <TextView
