--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,65 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_movie_details"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    tools:context="name.meszaros.gabor.popularmovies.MovieDetailsActivity"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="name.meszaros.gabor.popularmovies.MovieDetailsActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/text_movie_title"
+    <RelativeLayout
+        android:id="@+id/activity_movie_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_movie_original_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="14dp"
-        android:layout_below="@id/text_movie_title" />
+        <TextView
+            android:id="@+id/text_movie_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:textStyle="bold"
+            android:textSize="22sp"/>
 
-    <ImageView
-        android:id="@+id/image_movie_poster"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        android:layout_below="@id/text_movie_original_title" />
+        <TextView
+            android:id="@+id/text_movie_original_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="14dp"
+            android:layout_below="@id/text_movie_title" />
 
-    <TextView
-        android:id="@+id/text_movie_simple_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_movie_original_title"
-        android:textStyle="bold"
-        android:layout_toRightOf="@id/image_movie_poster" />
+        <ImageView
+            android:id="@+id/image_movie_poster"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_alignParentLeft="true"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp"
+            android:layout_below="@id/text_movie_original_title" />
 
-    <TextView
-        android:id="@+id/text_movie_release_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_movie_simple_title"
-        android:layout_toRightOf="@id/image_movie_poster" />
+        <TextView
+            android:id="@+id/text_movie_simple_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_movie_original_title"
+            android:textStyle="bold"
+            android:layout_toRightOf="@id/image_movie_poster" />
 
-    <TextView
-        android:id="@+id/text_movie_rating"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_movie_release_date"
-        android:layout_toRightOf="@id/image_movie_poster" />
+        <TextView
+            android:id="@+id/text_movie_release_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_movie_simple_title"
+            android:layout_toRightOf="@id/image_movie_poster" />
 
-    <TextView
-        android:id="@+id/text_movie_synopsis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/image_movie_poster" />
+        <TextView
+            android:id="@+id/text_movie_rating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_movie_release_date"
+            android:layout_toRightOf="@id/image_movie_poster" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/text_movie_synopsis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/image_movie_poster" />
+
+    </RelativeLayout>
+</ScrollView>
+
