Introduce packages to handle the number of files

--- a/app/src/main/res/layout/activity_browse_movies.xml
+++ b/app/src/main/res/layout/activity_browse_movies.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_browse_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="name.meszaros.gabor.popularmovies.BrowseMoviesActivity">
+    tools:context="name.meszaros.gabor.popularmovies.activities.BrowseMoviesActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_movies"
