--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Placeholder values those need to be modified from the code. -->
+    <!-- I make them small in order to make it visibile if you forgot to modify them in the code. -->
+    <dimen name="placeholder_px_value_set_in_the_code">2px</dimen>
+    <dimen name="placeholder_in_value_set_in_the_code">2in</dimen>
+    <dimen name="placeholder_mm_value_set_in_the_code">2mm</dimen>
+    <dimen name="placeholder_pt_value_set_in_the_code">2pt</dimen>
+    <dimen name="placeholder_dp_value_set_in_the_code">2dp</dimen>
+    <dimen name="placeholder_sp_value_set_in_the_code">2sp</dimen>
 </resources>
