--- a/app/src/main/res/layout/activity_browse_movies.xml
+++ b/app/src/main/res/layout/activity_browse_movies.xml
@@ -23,8 +23,8 @@
 
     <ProgressBar
         android:id="@+id/progress_bar_load_movies"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="@dimen/progress_bar_dimensions"
+        android:layout_height="@dimen/progress_bar_dimensions"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
