--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Default text sizes -->
+    <dimen name="text_size_title">22sp</dimen>
+    <dimen name="text_size_subtitle">18sp</dimen>
+    <dimen name="text_size_normal">14dp</dimen>
+
     <!-- Placeholder values those need to be modified from the code. -->
     <!-- I make them small in order to make it visibile if you forgot to modify them in the code. -->
     <dimen name="placeholder_px_value_set_in_the_code">2px</dimen>
