--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -19,7 +19,6 @@
             android:id="@+id/text_movie_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_title"/>
 
@@ -27,7 +26,7 @@
             android:id="@+id/text_movie_original_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="14dp"
+            android:paddingBottom="@dimen/text_size_title"
             android:textSize="@dimen/text_size_subtitle"
             android:layout_below="@id/text_movie_title" />
 
@@ -71,6 +70,7 @@
             android:id="@+id/text_movie_synopsis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/text_size_normal"
             android:textSize="@dimen/text_size_normal"
             android:layout_below="@id/image_movie_poster" />
 
