--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -2,6 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="name.meszaros.gabor.popularmovies.activities.MovieDetailsActivity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -73,6 +74,23 @@
             android:paddingTop="@dimen/text_size_normal"
             android:textSize="@dimen/text_size_normal"
             android:layout_below="@id/image_movie_poster" />
+
+        <TextView
+            android:id="@+id/text_review_label"
+            android:text="Reviews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/text_size_normal"
+            android:textSize="@dimen/text_size_subtitle"
+            android:textStyle="bold"
+            android:layout_below="@id/text_movie_synopsis" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="LinearLayoutManager"
+            android:layout_below="@id/text_review_label" />
 
     </RelativeLayout>
 
