--- a/app/src/main/res/menu/activity_browse_movies.xml
+++ b/app/src/main/res/menu/activity_browse_movies.xml
@@ -10,4 +10,8 @@
         android:id="@+id/menu_switch_highest_rated"
         android:orderInCategory="2"
         android:title="@string/action_switch_highest_rated" />
+    <item
+        android:id="@+id/menu_switch_favorites"
+        android:orderInCategory="3"
+        android:title="@string/action_switch_favorites" />
 </menu>
