--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -106,7 +106,7 @@
             android:layout_below="@id/text_trailers_label" />
 
         <TextView
-            android:id="@+id/text_review_label"
+            android:id="@+id/text_reviews_label"
             android:text="@string/label_reviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -120,7 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="LinearLayoutManager"
-            android:layout_below="@id/text_review_label" />
+            android:layout_below="@id/text_reviews_label" />
 
     </RelativeLayout>
 
