--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -27,7 +27,7 @@
             android:id="@+id/text_movie_original_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/text_size_title"
+            android:layout_marginBottom="@dimen/space_medium"
             android:textSize="@dimen/text_size_subtitle"
             android:layout_below="@id/text_movie_title" />
 
@@ -36,7 +36,7 @@
             android:layout_width="@dimen/placeholder_dp_value_set_in_the_code"
             android:layout_height="@dimen/placeholder_dp_value_set_in_the_code"
             android:layout_alignParentLeft="true"
-            android:paddingRight="@dimen/column_space_size"
+            android:layout_marginRight="@dimen/column_space_size"
             android:layout_below="@id/text_movie_original_title" />
 
         <TextView
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_movie_original_title"
             android:textStyle="bold"
-            android:paddingLeft="@dimen/column_space_size"
+            android:layout_marginLeft="@dimen/column_space_size"
             android:textSize="@dimen/text_size_normal"
             android:layout_toRightOf="@id/image_movie_poster" />
 
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_movie_simple_title"
-            android:paddingLeft="@dimen/column_space_size"
+            android:layout_marginLeft="@dimen/column_space_size"
             android:textSize="@dimen/text_size_normal"
             android:layout_toRightOf="@id/image_movie_poster" />
 
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_movie_release_date"
-            android:paddingLeft="@dimen/column_space_size"
+            android:layout_marginLeft="@dimen/column_space_size"
             android:textSize="@dimen/text_size_normal"
             android:layout_toRightOf="@id/image_movie_poster" />
 
@@ -73,8 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClickFavoritesButton"
-            android:layout_marginTop="@dimen/text_size_normal"
-            android:paddingLeft="@dimen/column_space_size"
+            android:layout_marginTop="@dimen/space_small"
+            android:layout_marginLeft="@dimen/column_space_size"
             android:layout_below="@id/text_movie_rating"
             android:layout_toRightOf="@id/image_movie_poster" />
 
@@ -82,7 +82,7 @@
             android:id="@+id/text_movie_synopsis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/text_size_normal"
+            android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_size_normal"
             android:layout_below="@id/image_movie_poster" />
 
@@ -91,8 +91,8 @@
             android:text="@string/label_trailers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/text_size_normal"
-            android:paddingBottom="@dimen/text_size_normal"
+            android:layout_marginTop="@dimen/space_small"
+            android:layout_marginBottom="@dimen/space_small"
             android:textSize="@dimen/text_size_subtitle"
             android:textStyle="bold"
             android:layout_below="@id/text_movie_synopsis" />
@@ -110,7 +110,7 @@
             android:text="@string/label_reviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/text_size_normal"
+            android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_size_subtitle"
             android:textStyle="bold"
             android:layout_below="@id/recycler_trailers" />
